--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,92 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.rectangle-small {
+  width: 12px;
+  flex-shrink: 0;
+}
+.rectangle-half {
+  width: 25%;
+}
+.rectangle-full {
+  width:100%;
+}
+.row24px {
+  height: 12px;
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  gap:0px;
+  flex-shrink: 0;
+
+}
+.row48px {
+  height: 24px;
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  gap:0px;
+  flex-shrink: 0;
+}
+.row-eighth {
+  height: 12.5%;
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  gap:0px;
+
+}
+.row-quarter {
+  height: 25%;
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  gap:0px;
+}
+.row-half {
+  height: 50%;
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  gap:0px;
+}
+.row-full {
+  height: 100%;
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  gap:0px;
+}
+
+.gradient-vertical {
+  background-image: linear-gradient(180deg, #B0D2DE 0%, #F2EFE5 15%, #FF76A2 26%, #613B38 40%, #613B38 44%, #E7303A 55%, #DFCDFF 68%, #B0D2DE 78%, #F2EFE5 89%, #B0D2DE 100%);
+  background-size: 100% 400%;
+  animation: gradientMove 15s linear infinite;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+@keyframes gradientMove {
+  0% { background-position: 50% 0%; }
+  50% { background-position: 50% 100%; }
+  100% { background-position: 50% 0%; }
+}
+
+#gradient-animation-v1 {
+  animation-duration: 15s;
+}
+
+#gradient-animation-v2 {
+  animation-duration: 18s;
+  animation-delay: 2s;
+}
+
+#gradient-animation-v3 {
+  animation-duration: 21s;
+  animation-delay: 4s;
+}
+
+#gradient-animation-v4 {
+  animation-duration: 24s;
+  animation-delay: 6s;
+}
