--- a/app/globals.css
+++ b/app/globals.css
@@ -42,7 +42,6 @@ body {
   flex-direction: row;
   gap:0px;
   flex-shrink: 0;
-
 }
 .row48px {
   height: 24px;
@@ -58,7 +57,6 @@ body {
   display: flex;
   flex-direction: row;
   gap:0px;
-
 }
 .row-quarter {
   height: 25%;
@@ -87,6 +85,7 @@ body {
   background-size: 100% 400%;
   animation: gradientMove 15s linear infinite;
   border: 1px solid rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 
 @keyframes gradientMove {
@@ -99,9 +98,17 @@ body {
   animation-duration: 15s;
 }
 
+#gradient-animation-v1:hover {
+  animation-duration: 10s;
+}
+
 #gradient-animation-v2 {
   animation-duration: 18s;
   animation-delay: 2s;
+}
+
+#gradient-animation-v2:hover {
+  animation-duration: 10s;
 }
 
 #gradient-animation-v3 {
@@ -109,7 +116,15 @@ body {
   animation-delay: 4s;
 }
 
+#gradient-animation-v3:hover {
+  animation-duration: 10s;
+}
+
 #gradient-animation-v4 {
   animation-duration: 24s;
   animation-delay: 6s;
+}
+
+#gradient-animation-v4:hover {
+  animation-duration: 10s;
 }
